--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "symfony/framework-bundle" : ">=2.3"
+        "symfony/framework-bundle" : ">=2.3",
+        "silvestra/site": "0.1.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2"
